--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,25 @@
     <string name="job_search_edittext_text">Rechercher...</string>
     <string name="city_search_textview_text">Dans quelle ville ?</string>
     <string name="city_search_edittext_text">Rechercher...</string>
-    <string name="convention_checkbox_text">Médecins conventonnés</string>
+    <string name="convention_checkbox_text">Médecins conventionnés</string>
     <string name="search_button_text">Valider</string>
+    <string name="title_activity_login">Sign in</string>
+
+    <!-- Strings related to login -->
+    <string name="prompt_email">Email</string>
+    <string name="prompt_password">Password (optional)</string>
+    <string name="action_sign_in">Sign in or register</string>
+    <string name="facebook_sign_in">Facebook</string>
+    <string name="google_sign_in">Google</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="error_invalid_email">This email address is invalid</string>
+    <string name="error_invalid_password">This password is too short</string>
+    <string name="error_incorrect_password">This password is incorrect</string>
+    <string name="error_field_required">This field is required</string>
+    <string name="permission_rationale">"Contacts permissions are needed for providing email
+        completions."
+    </string>
+    <string name="standard_sign_in">Inscription</string>
+    <string name="standard_connect">Connexion</string>
+    <string name="login_legal_textview_text">En m\'inscrivant, j\'accepte les Conditions générales ainsi que la Politique de confidentialité</string>
 </resources>
